Adds permissions for system users. Permissions are allocated by the system admin. Admin hass full control

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1,24 +1,27 @@
-* {
-    border-radius: 0 !important;
-    -moz-border-radius: 0 !important;
-    -webkit-border-radius: 0 !important;
-}
 a {
     text-decoration: none;
-}
-.cc-content {
-    width: 50%;
-    margin: auto;
-}
-.cc-cart {
-    position: fixed;
-    z-index: 5;
-    right: 0;
-    top: 50px;
-    margin: 10px;
 }
 .alert-failed, .alert-restricted {
     color: #a94442;
     background-color: #f2dede;
     border-color: #ebccd1;
+}
+.cc-3q {
+    width: 75%;
+    margin: auto;
+}
+.cc-cart{
+    position: fixed;
+    z-index: 5;
+    right: 0;
+    top: 50px;
+    margin: 16px;
+    transition: all .25s ease-in-out;
+}
+.cc-cart:hover{
+    transform: scale(1.1);
+}
+.cc-borderless{
+    border: none;
+    box-shadow: none;
 }
